# cp2077-translate

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  config.toml.example  pyproject.toml  requirements.txt
.claude/agents/: code-reviewer.md  cost-estimator.md  logging-agent.md  mod-validator.md  senior-engineer.md  test-runner.md  translation-expert.md  wolvenkit.md
cp2077_translate/: __init__.py  config.py  extractor.py  fileutil.py  main.py  packager.py  repacker.py  translator.py
tests/: test_config.py  test_fileutil.py  test_translator.py
