[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cp2077-translate"
version = "1.0.0"
description = "CLI toolchain for translating Cyberpunk 2077 localization files via LLM"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
anthropic = ["anthropic>=0.30.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["cp2077_translate*"]

[project.scripts]
cp2077-translate = "cp2077_translate.main:main"
